Updated project changes

--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/gucollab
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production_min_32_chars
 PORT=3000
 EMAIL_HOST=smtp.gmail.com
